# scRepresentation

./: .gitignore  AGENTS.md  README.md  goal.md  init-scdfm.sh  local_audit.md  local_goal.md  local_suggestion.md  post_sync_validate_and_smoke.sh  remote_decision.md  sync_from_lilab.sh
CoupledFM/model/: .gitignore  README.md  RUN_TUTORIAL.md  TEST_TUTORIAL.md  config.py  evaluate.py  fm_ot.py  inference.py  latent_utils.py  metrics.py  mmd_utils.py  paths.py  pert_batch_utils.py  pyproject.toml  train.py
CoupledFM/model/condition_emb/: __init__.py
CoupledFM/model/data/: __init__.py  dataset.py  graph.py  pert_split.py  vocab.py
CoupledFM/model/env/: LOCK_NOTES.md  README.md  bootstrap_h20.sh  conda_failfast.sh  environment.yml  requirements.txt
CoupledFM/model/latent/: README.md  audit_composition_split.py  config.py  dataset.py  eval_background_groups.py  eval_condition_delta_decomposition.py  eval_condition_families.py  eval_condition_residuals.py  eval_split_groups.py  evaluate_prior_correction.py  fit_response_normalizer.py  fm_ot.py  perturb_helpers.py  prepare_fm_data.py  prepare_scfm_fm_data.py  response_normalizer.py  train.py  validate_fm_bundle.py
CoupledFM/model/models/: __init__.py  attention.py  layers.py  velocity_field.py
CoupledFM/model/raw_pretrain/: __init__.py  config.py  data_source.py  dataset.py  direction_adapter.py  losses.py  sampler.py  train.py
CoupledFM/model/scripts/: submit_cellgene_pretrain.sh  submit_pert_embed_compare_8gpu.sh  submit_stack_gene_training.sh  sweep_gene_pert_32.sh
CoupledFM/model/tests/: test_plan_guards.py  (+28 more)
(+1424 files in other folders)
