# Optional install from this directory (`pip install .` inside `model/`): discovers
# the `model` package in the repository root via `packages.find.where`.
# Canonical install remains `pip install -e .` from the repo root CoupledFM/.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coupledfm-model"
version = "0.2.0"
description = "Unified CoupledFM: latent FM + raw expression FM with optional coupling"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "anndata>=0.9",
    "pandas>=2.0",
    "scipy>=1.10",
    "h5py>=3.8",
    "tyro>=0.7",
    "POT>=0.9",
    "scanpy>=1.9",
]

[project.optional-dependencies]
flash = ["flash-attn>=2.5,<3"]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = [".."]
include = ["model*"]
